	-- Added some warnings in BasicResourcePool's constructor if min, max, and start are misordered.
	   Misordered values are reordered. Thanks to bronzenose on github for the suggestion.
	-- Overloaded AbstractPoolBackedDataSource / AbstractComboPoolBackedDataSource toString,
	   so we've a toString( boolean show_config ). The full reflective config is now shown only when logging
	   pool manager initialization. Otherwise we revert to a fast, nonreflective toString(). We'll see whether anyone
	   minds the abbreviation. Thanks to kibertoad and Xerosigma on github for the suggestion.
	-- Fixed implementations of wrap( ... ) / isWrapperFor( ... ) to properly conform to spec when given an interface implemented
	   directly by the receiver of the wrap( ... ) call. Many thanks to baracil on github for calling attention to this issue.
c3p0-0.9.5-pre8
	-- Resolved a Serialization problem introduced in c3p0-0.9.5-pre7 (Broke serializability of DefaultConnectionTester
	   and therefore typical instances of WrapperConnectionPoolDataSource.) Many thanks to Petar Tachiev for calling attention to this issue.
	-- [in mchange-commons-java] Fixed a latent issue where decoding of JNDI References would fail if the Object factory
	   was not loaded by the System ClassLoader. (This issue was revealed when Serialization failures provoked fallback
	   to a Reference Serialization strategy.) Many thanks to Petar Tachiev for calling attention to this issue.
c3p0-0.9.5-pre7
	-- Cleaned up (and exposed a configuration property to tweak) selection of Connection tests when
	   no query is provided. Do we use Connection.isValid(...), the traditional DatabaseMetaData-based test,
	   something else? Now, by default we try isValid(...) but we back-off to the traditional test on error.
	   But this behavior is configurable via the property 'com.mchange.v2.c3p0.impl.DefaultConnectionTester.querylessTestRunner'
	   (which is documented with 'Other Properties').